[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = ["science"]
description = "Sparse & dense vectors for use in high dimensional vector spaces."
documentation = "https://docs.rs/svm"
keywords = [
    "vectors",
    "dense",
    "sparse",
    "vector-space",
    "linear-algebra",
]
license = "MPL-2.0"
name = "vectors"
readme = "README.md"
repository = "https://github.com/deepthought/vectors"
version = "0.1.1"

[dependencies]
arrayvec = "0.4.7"
ordered_iter = "0.1.0"

[dependencies.missing_mpl]
version = "0.1.0"
optional = true

[dependencies.num-traits]
branch = "mul_add"
git = "https://github.com/regexident/num-traits.git"

[dev-dependencies]
expectest = "0.6.0"

[features]
default = ["std"]
std = []
nightly = ["missing_mpl"]
